[tool.poetry]
name = "coffee-log"
version = "0.1.0"
description = ""
authors = ["André Wendler <42637005+a-wendler@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
SQLAlchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
